# stt-mg

./: Cargo.toml  README.md  config-f64.toml  log-prob-bigram.json  monophone-f64.json  phonemes.json
common/: Cargo.toml
common/src/: args.rs  lib.rs  settings.rs
stt-cuda/: Cargo.toml
stt-cuda/src/: main.rs
stt-f32/: Cargo.toml
stt-f32/src/: main.rs
stt-f64/: Cargo.toml
stt-f64/src/: main.rs
stt-wgpu/: Cargo.toml
stt-wgpu/src/: main.rs
