[workspace]
members = ["common","stt-cuda","stt-f32", "stt-f64", "stt-wgpu"]
resolver = "3" # Nécessite Rust 1.83+ ou l'édition 2024

[workspace.dependencies]
chrono = "0.4.44"
config = "0.15.23"
cpal = "0.17.3"
env_logger = "0.11.10"
log = "0.4.29"
ndarray = "0.17.2"
rayon = "1.12.0"
ron = "0.12.1"
rubato = "0.16.2"
tokio = { version = "1.52.2", features = ["time","process","fs","sync", "io-util", "macros","rt-multi-thread"] }
toml = "1.1.2"
wavers = { version = "1.5.1", features = ["ndarray"] }
old_ndarray = {package = "ndarray", version = "0.16.1"}
serde = { version = "1.0.228", features = ["derive"] }
clap = { version = "4.6.0", features = ["derive"] }
regex = "1.12.3"
