[package]
name = "common"
version = "0.1.0"
edition = "2024"

[features]
default = []
f32 = ["dep:stt-pncc","stt-pncc/f32","dep:stt-train","stt-train/f32"]
f64 = ["dep:stt-pncc","stt-pncc/f64","dep:stt-train","stt-train/f64"]

[dependencies]
stt-pncc = { tag = "1.0.0", git = "ssh://git@github.com/raglady/stt-pncc.git", optional = true }
wavers = { workspace = true }
ndarray = { workspace = true }
tokio = { workspace = true }
old_ndarray = { workspace = true }
stt-train = {  tag = "1.0.0",  git = "ssh://git@github.com/raglady/stt-train.git", optional = true }
rubato = { workspace = true }
serde = { workspace = true }
clap = { workspace = true }
