[package]
name = "stt-wgpu"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { workspace = true }
stt-train = {  tag = "1.0.0",  git = "ssh://git@github.com/raglady/stt-train.git", features = ["f32","wgpu"] }
tokio = { workspace = true }
log = { workspace = true }
config = { workspace = true }
cpal = { workspace = true }
env_logger = { workspace = true }
ndarray = { workspace = true }
ron = { workspace = true }
rayon = { workspace = true }
common = { path = "../common", features = ["f32"] }
clap = { workspace = true }
